--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
+certifi==2017.11.5
+chardet==3.0.4
 coverage==4.4.2
 Django==2.0
 djangorestframework==3.7.7
+idna==2.6
+mock==2.0.0
+pbr==3.1.1
 pep8==1.7.1
+pkginfo==1.4.1
 pytz==2017.3
+requests==2.18.4
+requests-toolbelt==0.8.0
+six==1.11.0
+tqdm==4.19.5
+twine==1.9.1
+urllib3==1.22
