--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
-certifi==2017.11.5
+bleach==3.0.2
+certifi==2018.11.29
 chardet==3.0.4
 coverage==4.4.2
-Django==2.0
-djangorestframework==3.7.7
-idna==2.6
+Django==2.1.4
+djangorestframework==3.9.0
+docutils==0.14
+idna==2.8
 mock==2.0.0
 pbr==3.1.1
 pep8==1.7.1
-pkginfo==1.4.1
+pkginfo==1.4.2
+Pygments==2.3.1
 pytz==2017.3
-requests==2.18.4
+readme-renderer==24.0
+requests==2.21.0
 requests-toolbelt==0.8.0
-six==1.11.0
-tqdm==4.19.5
-twine==1.9.1
-urllib3==1.22
+six==1.12.0
+tqdm==4.28.1
+twine==1.12.1
+urllib3==1.24.1
+webencodings==0.5.1
